Updated app version and history

--- a/doc/history
+++ b/doc/history
@@ -1,3 +1,13 @@
+<a class="anchor release_tag" name="v0_49_0_pre0"></a>
+<h2><a href="#v0_49_0_pre0">Tag: v0.49.0.pre0</a></h2>
+
+##### Branch: 'master'
+
+##### by Thao Huynh on 14-Oct-2020 09:08AM
+
+
+Merge changes in ATP since ATP standalone is no longer use
+
 <a class="anchor release_tag" name="v0_48_0"></a>
 <h1><a href="#v0_48_0">Tag: v0.48.0</a></h1>
 
